# advent_of_code_2024

./: .gitignore  Cargo.toml  README.md
day01/: Cargo.toml
day01/src/: main.rs
day02/src/: main.rs
day03/: Cargo.toml
day03/src/: main.rs
day04/: Cargo.toml
day04/src/: main.rs
day05/: Cargo.toml
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs
day08/: Cargo.toml
day08/src/: main.rs
day09/src/: main.rs
day10/: Cargo.toml
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day12/src/: main.rs
util/src/: lib.rs
